Bug 405982: Improve error handling and consistency with image encoders. r=dolse, r+sr=pavlov, a=beltzner